# claudeMeter

./: .gitignore  LICENSE
.claude/commands/commit-message/: SKILL.md
.claude/commands/spec/: template.md
_plans/: claudemeter-usb-serial-display.md
_specs/: claudemeter-usb-serial-display.md
examples/inc/: LVGL_example.h  lv_conf.h
examples/src/: LVGL_example.c
firmware/: CLAUDE.md  CMakeLists.txt  main.c
firmware/examples/: CMakeLists.txt
firmware/examples/inc/: ImageData.h  LCD_Test.h  LVGL_example.h  app.h  serial_input.h
firmware/examples/src/: ImageData.c  LCD_1in14_LVGL_test.c  LVGL_example.c  app.c  serial_input.c
firmware/lib/Config/: CMakeLists.txt
firmware/lib/LCD/: CMakeLists.txt  LCD_1in14.c  LCD_1in14.h
firmware/uf2/: RP2350-GEEK-LVGL.uf2
host/: claudemeter.spec  claudemeter_config.json  claudemeter_host.py  install.py  native_manifest.json  requirements.txt  serial_writer.py
lib/Config/: DEV_Config.h
lib/LCD/: LCD_1in14.c
widget/: content.js  inject.js  manifest.json  service-worker.js
